--- a/cart.html
+++ b/cart.html
@@ -28,7 +28,7 @@
             <input id="search" type="search" name="search" placeholder="SEARCH by name, color or collection" /> 
         
             <img class="logo" src="img/white-logo.svg" alt="logo">
-        <span>CART(0)</span>
+        <span class="cart">CART(0)</span>
     <br>
         <ul>
             <li><a href="">SHOP</a></li>
@@ -41,7 +41,7 @@
     </header>
     <main>
       <h3>YOUR SHOPPING CART</h3>
-      <section class="firstBag">
+      <section class="firstBag instead">
         <img
           src="images/Ulrikke_turquoise-front.webp"
           alt="Ulrikke_turquoise-front"
@@ -69,7 +69,7 @@
           <button id="remove1">X REMOVE FROM THE CART</button>
         </div>
       </section>
-      <section class="secondBag">
+      <section class="secondBag instead">
         <img
           src="images/Yasmin_recycled_yellow-front.webp"
           alt="Yasmin_recycled_yellow-front"
@@ -95,7 +95,7 @@
           <button id="remove2">X REMOVE FROM THE CART</button>
         </div>
       </section>
-      <section class="pay">
+      <section class="pay instead">
         <p class="moveRight">COST: <span id="cost">748,50</span> DKK</p>
         <p id="ship">SHIPPING: 35,00 DKK</p>
         <p class="moveRight">
